spade-tests/src/snapshots/spade_tests__typeinference__error_types_silently_fail_method_resolution.snap
---
source: spade-tests/src/typeinference.rs
---
fn func(a: uint<8>) -> uint<8> {
    a
}

fn test() {
    func(true).method()
}


error: Argument type mismatch. Expected uint<8> got bool
  ┌─ testinput:6:10
  │
6 │     func(true).method()
  │          ^^^^ expected uint<8>
  │
  = note: Expected: uint<8>
               Got: bool
